force-app/main/default/objects/Harvest__c/Harvest__c.object-meta.xml
<CustomObject>
    <label>収穫</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>収穫名</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>収穫</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>