force-app/main/default/objects/Harvest__c/fields/Crop_Picture__c.field-meta.xml
<CustomField>
    <fullName>Crop_Picture__c</fullName>
    <formula>if(ISBLANK(Harvest_Field__r.Picture_URL__c), '', IMAGE(Harvest_Field__r.Picture_URL__c, "Picture"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作物画像</label>
    <type>Text</type>
</CustomField>