force-app/main/default/objects/Harvest__c/fields/Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Date__c</fullName>
    <label>収穫日</label>
    <type>Date</type>
</CustomField>