force-app/main/default/objects/Harvest__c/fields/Moisture_Level__c.field-meta.xml
<CustomField>
    <fullName>Moisture_Level__c</fullName>
    <label>水分レベル</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>