force-app/main/default/objects/Harvest__c/fields/Predicted_Yield__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Yield__c</fullName>
    <label>予測産出</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>