force-app/main/default/objects/Harvest__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <label>産出</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>